<resources>
    <string name="como_me_cuido">¿Cómo me cuido?</string>
    <string name="en_el_hogar">En el hogar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_implementation">Implementación de trabajo</string>
    <string name="contenidos_educativos">Contenidos educativos digitales</string>
    <string name="sugerencias_trabajo_casa">Sugerencias en el hogar</string>
    <string name="dengue_content"><![CDATA[\<p>Evite complicaciones de su salud o la de sus familiares, conozca de las enfermedades transmitidas por vectores:</p><br><h2>DENGUE</h2><br><p>¿Qué es y cómo se transmite?</p><p>Es una infección viral transmitida a los seres humanos por la picadura del mosquito Aedes aegypti infectado, se presenta en zonas por debajo de 1.500 metros sobre el nivel del mar como Cartagena, Medellín y Villavicencio. </p><br><p>¿Cuáles son los síntomas?</p><p>Los síntomas aparecen entre 4 y 10 días después de la picadura y son: fiebre alta, dolor de cabeza, dolor detrás de los ojos, dolor muscular y articular, se pueden presentar síntomas como náuseas, vómitos y sarpullidos en la piel. La infección puede causar síntomas gripales y en ocasiones, evoluciona hasta convertirse en un cuadro potencialmente mortal, “dengue grave”. </p><br><p>¿Qué hacer en caso de enfermar? </p><p>Si presenta síntomas como: fiebre, dolor de cuerpo, dolor de ojos, brotes en la piel, no se automedique, busque atención médica. Si además presenta: vómito continuo, dolor abdominal intenso, algún sangrado, diarrea, llanto incontrolable en niños, somnolencia o disminución brusca de temperatura busque atención médica de inmediato. </p><br><h2>CHIKUNGUNYA</h2><p>¿Qué es y cómo se transmite?</p><p>Es una enfermedad causada por el virus Chikungunya, transmitido por la picadura de mosquitos hembra de Aedes aegypti y Aedes albopictus infectados. </p><br><p>¿Cuáles son los síntomas?</p><p>Los síntomas aparecen entre 8 y 10 días después de la picadura y son: fiebre, dolor de articulaciones, brotes en la piel. Es una enfermedad autolimitada con duración aproximada de 10 días, la cual evoluciona a la mejoría, aunque en algunos casos puede persistir por semanas o meses.</p><br><p>¿Cuál es su tratamiento?</p><p>Siempre que presente síntomas debe consultarse al médico, NO AUTOMEDICARSE. El tratamiento consiste en aliviar los síntomas, los pacientes deben estar en reposo y tomar abundantes líquidos. </p><br><h2>ZIKA</h2><p>¿Qué es y cómo se transmite?<p><p>Es una enfermedad causada por el virus Zika, transmitido por mosquitos del género Aedes aegypti o Aedes albopictus infectados.</p><br><p>¿Cuáles son los síntomas?</p><p>Los síntomas aparecen entre 3 y 7 días después de la picadura, pueden durar de 2 a 7 días e incluyen fiebre, conjuntivitis no purulenta, dolor de cabeza, dolor muscular, dolor de articulaciones, brotes en la piel, edema en miembros inferiores y menos frecuentemente, dolor detrás de los ojos, falta de apetito, diarrea o dolor abdominal.Tratamiento Siempre que presente síntomas debe consultarse al médico, NO AUTOMEDICARSE. El tratamiento consiste en aliviar síntomas, los pacientes deben estar en reposo, tomar abundantes líquidos.</p>\]]></string>
    <string name="gastroinstetinal_content"><![CDATA[<p>Evite complicaciones de su salud o la de sus familiares, conozca de las enfermedades gastrointestinales</p><br><h2>Diarrea</h2><p>La Organización Mundial de la Salud (OMS) define la Enfermedad Diarreica Aguda (EDA) como la presencia de tres o más deposiciones en 24 horas, con una disminución de la consistencia habitual y una duración menor de 14 días. La EDA puede ocurrir a cualquier edad de la vida, pero son los lactantes y niños menores de cinco años los más predispuestos a desarrollar la enfermedad y presentar complicaciones como sepsis, deshidratación y muerte. La diarrea es un evento que se inicia en forma aguda y puede prolongarse por muchos días convirtiéndose en una diarrea persistente.</p><br><p>¿Qué lo puede producir?</p><p>Puede ocurrir a través de la ingestión de alimentos o agua contaminados y mediante contacto con superficies contaminadas.</p><br><p>¿Cómo se trata?</p><p>El tratamiento depende del diagnóstico y la gravedad de la diarrea, si es leve se puede manejar con abundantes líquidos, suero oral o sales de rehidratación en casa. Si la diarrea es grave y se acompaña de deshidratación es necesario consultar al médico para administrar líquidos.</p><br><p>Signos de alarma en menores de cinco años, consulte inmediatamente al médico:</p><ul><li> Intranquilo, irritable</li><li> Ojos hundidos</li> <li>Bebe mal o no puede beber</li> <li> Vomita todo</li> <li> Hay sangre en las deposiciones</li> <li> Si aparece fiebre y antes no la tenía</li></ul> <br><h2>Medidas de prevención:</h2><ul><li>Lávese las manos con agua y jabón antes de manipular alimentos y después de usar el baño</li><li>Proteja los alimentos de insectos y roedores</li><li>Si va a consumir frutas o verduras lávelas con agua potable</li><li>Consuma alimentos bien cocinados, especialmente las carnes de res, pollo, cerdo, pescado (derivados de la pesca) y huevos</li><li>Beba agua potable</li><li>El peligro de la diarrea es la deshidratación consuma abundantes líquidos</li><li>En menores de cinco años no olvide lactancia materna exclusiva hasta los seis meses, inicio de alimentación complementaria</li></ul><br><h2>Enfermedades transmitidas por alimentos y agua (ETA):</h2><p>Son los síndromes originados por la ingestión de alimentos, incluida el agua, que contienen agentes etiológicos o toxinas en cantidades tales que afectan la salud del consumidor a nivel individual o en grupos de población las alergias a los alimentos no se consideran ETA.</p><br><h2>Las ETA pueden ser de dos tipos:</h2><ul><li>Infecciones alimentarias: son las ETA producidas por la ingestión de alimentos o agua contaminados con agentes infecciosos específicos tales como bacterias, virus, hongos, parásitos, que en la luz intestinal pueden multiplicarse o lizarse y producir toxinas o invadir la pared intestinal y desde allí alcanzar otros aparatos o sistemas.</li><li>Intoxicaciones alimentarias: son las ETA producidas por la ingestión de toxinas formadas en tejidos de plantas, animales o producidas por microorganismos o sustancias químicas o radioactivas que se incorporan a ellos de manera accidental, incidental o intencional en cualquier momento desde su producción hasta su consumo.</li></ul><br><h2>Prevención:</h2><ul><li>Lávese las manos con agua y jabón antes de manipular alimentos y después de usar el baño</li><li>Proteja los alimentos de insectos y roedores</li><li>Si va a consumir frutas o verduras lávelas con agua potable</li><li>Beba agua potable</li><li>No consuma bebidas de dudosa procedencia</li><li>Consuma bebidas embotelladas</li><li>Consuma alimentos bien cocinados, especialmente las carnes de res, pollo, cerdo, pescado (derivados de la pesca) y huevos</li><li>Si los alimentos están vencidos o si tienen sabor, olor o color extraño, no los consuma</li></ul>]]></string>
    <string name="inmunoprevenibles"><![CDATA[<p>Evite complicaciones de su salud o la de sus familiares, conozca de las enfermedades inmunoprevenibles</p><br><h2>Varicela</h2><p>¿Qué es?</p><p>Es una infección viral muy contagiosa provocada por el virus Varicella-Zoster. Es común entre la población infantil, aunque puede presentarse en los adolescentes y adultos en quienes tiende a ser más grave.</p><br><p>¿Cómo se transmite?</p><p>Usted puede contraerla tocando los líquidos de una ampolla de varicela o si alguien con varicela tose o estornuda cerca de usted. Una persona se vuelve contagiosa 1 o 2 días antes de que aparezcan las ampollas y continúa siendo contagiosa hasta que todas las ampollas hayan formado costra.</p><br><p>¿Cuales son los síntomas?</p><p>Antes de que aparezcan las lesiones en la piel se puede presentar fiebre baja, dolor de cabeza y dolor de estómago. Luego aparecen ampollas en la piel entre 10 y 21 días después de haber tenido contacto con alguien que tenía la enfermedad. Frecuentemente se observan primero en la cara, la parte media del cuerpo o el cuero cabelludo. Después de uno o dos días, las ampollas se tornan grises y forman costras. Mientras tanto, nuevas ampollas brotan en grupos y a menudo aparecen en la boca, en los genitales y en los párpados. También produce picazón.</p><br><h2>¿Qué hacer en caso de enfermedad?</h2><ul><li>El tratamiento consiste en mantener al paciente lo más cómodo posible</li><li>Evite rascar o sobar las áreas de picazón, mantenga las uñas cortas para evitar daños en la piel al rascarse</li><li>Lave frecuentemente sus manos</li><li>Use ropa de cama fresca, suave y suelta</li><li>Evite usar ropa áspera, particularmente de lana, sobre un área de la picazón</li><li>Tome baños cortos de agua tibia con poco jabón y enjuague completamente</li><li>Aplique un humectante y calmante después de bañarse para suavizar y refrescar la piel</li><li>Evite la exposición prolongada a la humedad y calor excesivos</li><li>Use medicamentos sin aspirina, como acetaminofén para aliviar la fiebre</li></ul><br><h2>Consulte con el médico si:</h2><ul><li>Piensa que su hijo tiene varicela</li><li>El niño es mayor de 12 meses de edad y no ha sido vacunado contra esta enfermedad</li><li>Tiene un sistema inmunitario debilitado</li><li>Está embarazada</li><li>Tiene fiebre muy alta</li><li>Cualquier área del sarpullido o alguna parte del cuerpo se pone muy roja, caliente, muy sensible o comienza a salir pus</li></ul>\"]]></string>
    <string name="actualidad">Actualidad</string>
    <string name="consejos_salud">Concejos de salud</string>
    <string name="recovery_password_text">Olvidaste tu contraseña</string>
    <string name="corona_app_text">CoronApp</string>
    <string name="email">Correo electrónico</string>
    <string name="example_email">Por ejemplo: santiago@gmail.com</string>
    <string name="enter_password">Ingresa tu correo electrónico, te llegará un enlace  para recuperar tu contraseña, haz clic.</string>
    <string name="invitacion_reporte">Te invitamos a seguir reportando cualquier novedad en tu estado de salud para superar en comunidad el Coronavirus.</string>
    <string name="repoty_symptom">Reportar sintoma</string>
    <string name="diario_salud">Ver mi Diario Salud</string>
    <string name="report_symptom">Reporte de síntomas</string>
    <string name="add_profile">Selecciona la persona de quien \nharás el reporte o agrega los \nfamiliares que viven contigo, así nos \nayudas a localizar el virus</string>
    <string name="add_profile_text">Agregar familiar</string>
    <string name="shared_menu">Compartir</string>
    <string name="shared_title">¡Gracias por compartir!</string>
    <string name="shared_message"><![CDATA[<b>Sumar esfuerzos</b> nos ayuda a localizar y frenar el Coronavirus.]]></string>
    <string name="shared_button">Ir a inicio</string>
    <string name="title_select_part">Hola, Tania</string>
    <string name="sign_up">Registrarme</string>
    <string name="hi_cry">¡Hola!</string>
    <string name="description_home_no_login">Reporta tu estado de salud para ayudarnos a entender el comportamiento del virus en el país.</string>
    <string name="home_old_user_hello">¡Hola de nuevo!\nHemos mejorado</string>
    <string name="home_old_user_description">Te invitamos a\nactualizar tus datos</string>
    <string name="home_old_user_update">Actualizar</string>
    <string name="start">Empezar</string>
    <string name="answer_question_symptom">Contesta las preguntas \n para identificar síntomas \nasociados al Coronavirus</string>
    <string name="receive_recommendations">Recibe recomendaciones de acuerdo con el nivel de riesgo que identifiquemos</string>
    <string name="your_health">Cuida tu salud</string>
    <string name="attentive_symptom">Atento a los síntomas</string>
    <string name="call_the_doctor">Llama al médico</string>
</resources>