<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="60dp"
                android:gravity="center"
                android:text="@string/shared_menu"
                android:textColor="@color/toolbar_title"
                android:textSize="17sp"
                android:textStyle="normal|bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/introscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/mainlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_shared_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/shared_title"
                android:textColor="#0E225A"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/image_shared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_share_people" />

            <TextView
                android:id="@+id/text_shared_message"
                style="@style/TextTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="60dp"
                android:gravity="center"
                android:text="@string/shared_message" />

            <Button
                android:id="@+id/button_shared"
                style="@style/TextTitleBtnHome"
                android:layout_width="171dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/bg_btn_orange"
                android:elevation="2dp"
                android:text="@string/shared_button"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>